[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["wintrnite <wintrnite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
pydantic = "^1.9.1"
GeoAlchemy2 = "^0.12.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
autoflake = "^1.4"
unify = "^0.5"
flake8 = "^4.0.1"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
